# google-docs-markdown

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/: worktrees.json
.cursor/commands/: generate-pr.md
.cursor/rules/generate-pr/: RULE.md
.cursor/skills/fix-tests/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: API_ELEMENT_ANALYSIS.md  DEVELOPMENT_PLAN.md  GOOGLE_AUTH_SETUP.md  PHASE1_TASKS_1_2_SUMMARY.md  PYDANTIC_STRATEGY.md  REVIEW_FINDINGS.md  tech_spec.md
docs/archive/: PYDANTIC_STRATEGY.md
example_markdown/: google_doc_urls.txt  google_docs_copy_as_markdown.md
google_docs_markdown/: __init__.py  api_client.py  block_grouper.py  cli.py  client.py  comment_tags.py  diff_engine.py  downloader.py  element_registry.py  gcloud.py  image_extractor.py  markdown_deserializer.py  markdown_serializer.py  metadata.py  setup.py  source_map.py  transport.py  uploader.py
google_docs_markdown/handlers/: __init__.py  base.py  breaks.py  code_block.py  context.py  date.py  footnote.py  header_footer.py  heading.py  image.py  inline_format.py  link.py  list_handler.py  person.py  registry.py  rich_link.py  style.py  suggestion.py  table.py  text_run.py  toc.py
google_docs_markdown/models/: __init__.py  base.py  common.py  document.py  elements.py  requests.py  responses.py  styles.py
scripts/: convert_test_docs.py  download_api_reference.py  download_test_doc.py  generate_models.py  md_to_requests.py  roundtrip_test.py  update_models.py
tests/: __init__.py  test_annotations_serializer.py  test_api_client.py  test_api_client_basic.py  test_block_grouper.py  test_cli.py  test_client.py  test_comment_tags.py  test_context.py  test_diff_engine.py  test_downloader.py  test_element_registry.py  test_gcloud.py  test_handler_registry.py  test_integration.py  test_markdown_deserializer.py  test_markdown_serializer.py  test_metadata.py  test_models.py  test_phase26_serializer.py  test_roundtrip.py  test_setup.py  test_source_map.py  test_transport.py  test_uploader.py
tests/resources/document_jsons/: Markdown_Conversion_Example.json  Markdown_Conversion_Example_-_Multi-Tab.json  Markdown_Conversion_Example_-_Single-Tab.json  doc_urls.txt
