[project]
name = "google-docs-markdown"
version = "0.2.0"
description = "Download and edit Google Docs as Markdown using the Google Docs API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "typer>=0.9.0",
    "google-api-python-client-stubs>=1.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipython>=8.12.3",
]

[project.scripts]
google-docs-markdown = "google_docs_markdown.cli:main"
# Alias for convenience
gdm = "google_docs_markdown.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["google_docs_markdown"]

[tool.uv]
# Dev dependencies are specified in [project.optional-dependencies]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["google_docs_markdown"]

[tool.ruff.format]
# The formatter shares some options with the linter, like line-length.
# Additional formatter-specific options exist:
quote-style = "double"
indent-style = "space"

[tool.mypy]
# Global options:
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
strict = false # Enable all strict checks (overrides many individual flags)
